fix: missing gap

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -56,6 +56,7 @@
     bottom: 0;
     display: flex;
     flex-direction: row;
+    gap: 10px;
     align-items: center;
     justify-content: flex-end;
     width: 100%;
